refactor FinnhubClient: [overloaded] searchAllStock() method; extract stock filtering logic into separate [overloaded] filterEnrichedSymbols() method;